--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -4,6 +4,7 @@
 
   justify-content: center;
   color: $button-font-color;
+  border: 1px solid transparent;
   cursor: pointer;
 }
 
@@ -26,24 +27,12 @@
   @extend %shared-button;
 
   height: $button-height-thin;
-  margin-top: $button-margin-top;
   background: $gradient-color-start;
+  border-radius: $border-radius;
   box-shadow: $btn-shadow;
-}
-
-.google-sign-in-btn {
-  @extend %shared-button;
-
-  height: $button-height;
-  color: $secondary-font-color;
-  border: 1px solid $light-outline-color;
-
-  img {
-    margin-right: $content-padding;
-  }
 
   &:hover {
-    border-color: $hover-color;
+    background-color: darken($gradient-color-start, 10%);
   }
 }
 
@@ -52,9 +41,9 @@
 
   padding: $button-padding-x;
   color: $primary-font-color;
+  background: $background-color;
   border: 2px solid $gradient-color-mid;
   border-radius: $border-radius;
-  cursor: pointer;
 
   &:hover {
     color: $gradient-color-start;
