--- a/src/public/css/pages/_register.scss
+++ b/src/public/css/pages/_register.scss
@@ -34,7 +34,12 @@ a.change-account-link:hover {
     @include flex-center;
 
     width: 100%;
-    border-radius: $border-radius;
+    margin-top: $button-margin-top;
+}
+
+#submit-button {
+    height: $header-large-thin-size;
+    padding: $content-padding 0;
 }
 
 #step-01-content,
@@ -66,15 +71,6 @@ a.change-account-link:hover {
     margin-top: $content-padding;
 }
 
-#submit-button {
-    margin-bottom: $content-padding;
-    padding: $content-padding 0;
-    background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
-     
-    &:hover {
-        background: $gradient-color-start;
-    }
-}
 
 .error-msg {
     color: $button-decline-color;
