replace a.change-account-link with .simple-link

--- a/src/public/css/components/_text.scss
+++ b/src/public/css/components/_text.scss
@@ -55,6 +55,13 @@
   }
 }
 
+.simple-link {
+  @extend %link;
+
+  font-weight: unset;
+  text-decoration: none;
+}
+
 .email-link {
   @extend %link;
 }
