Create style guide route

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -22,6 +22,7 @@
 @import "pages/analyze";
 @import "pages/admin";
 @import "pages/register";
+@import "pages/styleguide";
 
 // This file should contain all global CSS
 
