show scrollbar in register page

--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -17,6 +17,7 @@
 .half-container {
   box-sizing: border-box;
   width: 50%;
+  max-height: 100%;
   margin: 0 0.313rem;
   padding: 0 0.313rem;
   text-align: center;
@@ -32,6 +33,12 @@
     }
   }
 
+  &:first-of-type{
+    @extend %scrollbar;
+
+    overflow-x: hidden;
+  }
+
   .left-container {
     @include flex-center;
 
@@ -39,6 +46,7 @@
     width: 30.5rem;
     margin: auto;
     text-align: center;
+    padding: $content-padding
   }
 }
 
