--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -5,7 +5,7 @@
         </span></div>
     <div class="not-you">
         Not you?
-        <a class="simple-link" href="/login">
+        <a class="link" href="/login">
             Register with a different account
         </a>
     </div>
