--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -55,4 +55,4 @@
     <label for="checkbox-confirmation">I agree not to engage in any activities that may cause harm, disrupt, or compromise the security and integrity of the website or its users' data.</label>
 </div>
 <div id="submit-button" class="primary-button">Submit</div>
-<div id="register-error-msg" class="error-msg hide-content">Please answer all fields.</div>
+<div id="register-error-msg" class="error-text hide-content">Please answer all fields.</div>
