--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -45,8 +45,8 @@
     flex-direction: column;
     width: 30.5rem;
     margin: auto;
-    text-align: center;
-    padding: $content-padding
+    padding: $content-padding;
+    text-align: center
   }
 }
 
