--- a/src/views/styleguide.ejs
+++ b/src/views/styleguide.ejs
@@ -16,6 +16,19 @@
         <button class="close-button"> close button </button>
         <button class="unblur-button"> unblur button </button>
     </div>
+    <div class="text-wrapper"> Texts
+        <div class="main-header">main header</div>
+        <div class="larger-header">larger header</div>
+        <div class="large-header">large header</div>
+        <div class="large-thin-header">large thin header</div>
+        <div class="small-header">small header</div>
+        <div class="smaller-header">smaller header</div>
+        <a class="link" href="/styleguide">link</a>
+        <a class="email-link" href="sample@email.com">email link</a>
+        <a class="external-link" href="https://sample.com">external link</a>
+        <div class="light-text">light text</div>
+        <div class="error-text">error text</div>
+    </div>
 </body>
 
 </html>
