more and rename input-container and textarea

--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -47,7 +47,7 @@
     <div class="content-more-info">Please provide a brief explanation of why you'd like access to
         the website.</div>
     <div class="input-container">
-        <textarea id="register-input-reason" rows="4" cols="50"></textarea>
+        <textarea id="register-input-reason" rows="4" cols="50" class="input-textarea"></textarea>
     </div>
 </div>
 <div class="checkbox-confirmation-div">
