--- a/src/views/partials/admin/tab-user-management.ejs
+++ b/src/views/partials/admin/tab-user-management.ejs
@@ -6,5 +6,5 @@
             </div>
         </div>
     </div>
-    <%- include('user-management.ejs'); %>
+    <%- include('tab-contents/user-management.ejs'); %>
 </div>
