check if scripts is defined in login-register-layout

--- a/src/views/403.ejs
+++ b/src/views/403.ejs
@@ -1,5 +1,4 @@
 <%- include('login-register-layout.ejs', { 
     title: 'Access Denied',
-    body: ["partials/auth/403-content.ejs"],
-    scripts: ""
+    body: ["partials/auth/403-content.ejs"]
 }) %>
