--- a/src/public/css/components/_input.scss
+++ b/src/public/css/components/_input.scss
@@ -1,8 +1,8 @@
 // Inputs
 .input-container {
-  @include flex-center;
+  @include flex($align: center, $justify: center, $direction: row);
 
-  flex-direction: row;
+  flex-grow: 1; 
   width: 100%;
   margin-top: $content-padding;
   border-radius: $border-radius;
@@ -19,8 +19,9 @@
   @include font-style($weight: 100);
   @extend %scrollbar;
 
+  box-sizing: border-box; 
   width: 100%;
-  height: 10rem;
+  height: 100%; 
   padding: 1rem;
   border: 0;
   border-radius: $border-radius;
