--- a/src/public/css/components/_script.scss
+++ b/src/public/css/components/_script.scss
@@ -1,7 +1,7 @@
 // Script styles
 .script-content {
-  display: flex;
-  flex-direction: column;
+  @include flex($direction: column);
+
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -23,9 +23,8 @@
 
 .line-numbers {
     @include font-style($family: $script-font);
-    @include flex-direction;
+    @include flex($align: flex-end, $direction: column);
 
-    align-items: flex-end;
     min-width: 5ch;
     padding: 0 0.4375rem;
     overflow: hidden;
