--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -9,7 +9,6 @@
 .full-container {
   @include flex-center;
 
-  justify-content: center;
   width: 100%; 
   height: 100%; 
 }
@@ -40,9 +39,8 @@
   }
 
   .left-container {
-    @include flex-center;
+    @include flex($align: center, $justify: center, $direction: column);
 
-    flex-direction: column;
     width: 30.5rem;
     margin: auto;
     padding: $content-padding;
