clean up user modal

--- a/src/views/partials/modals/user-modal.ejs
+++ b/src/views/partials/modals/user-modal.ejs
@@ -6,16 +6,12 @@
                 <a class="email-link"></a>
             </div>
             <div class="action-buttons">
-                <button id="save-button" class="approve-button">Save and close</button>
-                <button id="close-modal-button" class="close-button">Close without saving</button>
+                <button id="close-modal-button" class="close-button">Close</button>
             </div>
         </div>
         <hr>
-        <div class="spacing"></div>
         <div class="smaller-header">Application message</div>
         <p id="user-application-message">testing test message</p>
-        <div class="spacing"></div>
-        <button id="delete-user-button" class="decline-button">Delete user</button>
     </div>
 </div>
 
