--- a/src/views/partials/modals/script-modal.ejs
+++ b/src/views/partials/modals/script-modal.ejs
@@ -3,8 +3,8 @@
         <div class="script-content">
             <div id="modal-header" class="script-header-container">
                 <span id="modal-title" class="main-header"></span>
-                <button id="download-html-button" class="primary-button">Download .HTML</button>
-                <button id="download-script-button" class="primary-button">Download script</button>
+                <button id="download-html-button" class="primary-button" data-filename="">Download .HTML</button>
+                <button id="download-script-button" class="primary-button" data-filename="">Download script</button>
                 <button id="close-modal-button" class="close-button">Close</button>
             </div>
             <div id="results" class="editor"><iframe id="results-iframe"></iframe></div>
