--- a/src/views/partials/home/table-logs.ejs
+++ b/src/views/partials/home/table-logs.ejs
@@ -4,7 +4,10 @@
 <tbody class="table-body">
     <% sortedLogs.forEach(log=> { %>
         <tr class="table-row" data-text="<%= log.text %>">
-            <td id="<%= log.id %>" class="table-cell light-text" data-timestamp="<%= log.create_time.getTime() %>">
+            <td id="<%= log.id %>" class="table-cell light-text" 
+                data-timestamp="<%= log.create_time.getTime() %>"
+                data-input="<%= log.file_path_input %>"
+                data-output="<%= log.file_path_result %>">
                 <%= formatDate(log.create_time) %>
             </td>
         </tr>
