display blacklist on page

--- a/src/views/partials/admin/tab-contents/server-settings.ejs
+++ b/src/views/partials/admin/tab-contents/server-settings.ejs
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="input-container">
-            <textarea id="prohibited-script-commands" rows="4" cols="50" class="input-textarea"></textarea>
+            <textarea id="prohibited-script-commands" rows="4" cols="50" class="input-textarea"><%= blacklist %></textarea>
         </div>
     </div>
 </div>
