update blacklist from admin panel

--- a/src/views/partials/admin/tab-contents/server-settings.ejs
+++ b/src/views/partials/admin/tab-contents/server-settings.ejs
@@ -22,7 +22,9 @@
             </div>
         </div>
         <div class="input-container">
-            <textarea id="prohibited-script-commands" rows="4" cols="50" class="input-textarea"><%= blacklist %></textarea>
+            <textarea id="prohibited-script-commands" rows="4" cols="50" class="input-textarea" value="<%= blacklist %>"><%= blacklist %></textarea>
         </div>
     </div>
 </div>
+
+<script src="js/admin/server-management.js"></script>
