--- a/src/views/partials/admin/tab-contents/server-settings.ejs
+++ b/src/views/partials/admin/tab-contents/server-settings.ejs
@@ -1,5 +1,5 @@
 <div class="server-settings-div">
-    <div>
+    <!-- <div>
         <div class="main-header-container">
             <div class="main-header">CSV file</div>
             <div class="action-buttons">
@@ -13,7 +13,7 @@
             <input type="file" name="file-upload" id="file-upload" class="hide-content" accept=".csv">
             <div id="file-name" class="hide-content"></div>
         </div>
-    </div>
+    </div> -->
     <div>
         <div class="main-header-container">
             <div class="main-header">Prohibited script commands</div>
